Tags dont use PagerAdapter now

--- a/app/src/main/res/layout/fragment_tags_manager.xml
+++ b/app/src/main/res/layout/fragment_tags_manager.xml
@@ -21,9 +21,12 @@
         android:layout_weight="0"
         android:background="#EEEAEAEA" />
 
-    <androidx.viewpager.widget.ViewPager
+
+    <FrameLayout
         android:id="@+id/pager"
         android:layout_width="match_parent"
-        android:layout_height="fill_parent" />
+        android:layout_height="match_parent">
+    </FrameLayout>
+
 </LinearLayout>
 
