--- a/app/src/main/res/layout/dialog_add_tag.xml
+++ b/app/src/main/res/layout/dialog_add_tag.xml
@@ -55,18 +55,21 @@
             android:orientation="horizontal">
 
             <RadioButton
+                android:id="@+id/radioButtonMale"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Male" />
 
             <RadioButton
+                android:id="@+id/radioButtonFemale"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:text="Female" />
 
             <RadioButton
+                android:id="@+id/radioButtonAny"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
