--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -10,7 +10,8 @@
     android:paddingLeft="10sp"
     android:paddingTop="10sp"
     android:paddingRight="10sp"
-    android:paddingBottom="10sp">
+    android:paddingBottom="10sp"
+    android:id="@+id/item_card">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
