--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -16,7 +16,8 @@
             android:id="@+id/tagsRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="45sp"
-            android:orientation="horizontal" />
+            android:orientation="horizontal"
+            tools:listitem="@layout/item_tags"/>
     </LinearLayout>
 
 
