--- a/app/src/main/res/layout/item_tags.xml
+++ b/app/src/main/res/layout/item_tags.xml
@@ -3,7 +3,8 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="10dp">
+    android:padding="10dp"
+    android:id="@+id/item_tags">
 
     <TextView
         android:id="@+id/myTags"
