Added swipe to delete tag function.(Need to fix test)

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -13,7 +13,7 @@
         android:orientation="horizontal">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/tagsRecyclerView"
+            android:id="@+id/mainTagsRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="45sp"
             android:orientation="horizontal"
