--- a/app/src/main/res/layout/item_tags_manager.xml
+++ b/app/src/main/res/layout/item_tags_manager.xml
@@ -2,9 +2,10 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="2dp"
+    android:layout_marginLeft="0dp"
     android:layout_marginTop="8dp"
-    android:layout_marginRight="2dp">
+    android:layout_marginRight="0dp"
+    android:id="@+id/tagsRecyclerViewItem">
 
     <RelativeLayout
         android:layout_width="wrap_content"
