--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="false">
@@ -25,42 +26,69 @@
                 android:src="@drawable/ic_profile_hq"
                 android:scaleType="centerCrop"/>
 
-
             <androidx.viewpager.widget.ViewPager
                 android:id="@+id/viewPager"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 />
 
+            <ProgressBar
+                android:id="@+id/profile_progress_bar"
+                style="@style/Widget.AppCompat.ProgressBar"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:scaleX="0.4"
+                android:scaleY="0.4"
+                android:visibility="gone" />
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginBottom="10sp"
+                android:layout_marginBottom="0sp"
                 android:gravity="bottom"
                 android:orientation="horizontal">
 
-                <ImageView
+                <com.google.android.material.floatingactionbutton.FloatingActionButton
                     android:id="@+id/delImage"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="50sp"
+                    app:fabCustomSize="50sp"
                     android:layout_weight="1"
-                    android:src="@drawable/delete_picture" />
+                    app:srcCompat="@drawable/ic_del_image"
+                    android:backgroundTint="#F3F3F3"
+                    android:layout_marginLeft="15sp"
+                    android:layout_marginBottom="10sp"
+                    android:scaleType="center"
+                    app:borderWidth="0dp"
+                    />
 
-                <ImageView
-                    android:id="@+id/setDefaultButton"
-                    android:layout_width="match_parent"
-                    android:layout_height="50sp"
-                    android:layout_weight="1"
-                    android:src="@drawable/set_profile"
-                    android:text="Set as default"
-                    android:textSize="12sp" />
-
-                <ImageView
+                <com.google.android.material.floatingactionbutton.FloatingActionButton
                     android:id="@+id/addImage"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="50sp"
+                    app:fabCustomSize="50sp"
                     android:layout_weight="1"
-                    android:src="@drawable/add_picture" />
+                    app:srcCompat="@drawable/ic_add_image"
+                    android:layout_marginLeft="20sp"
+                    android:layout_marginBottom="10sp"
+                    android:backgroundTint="#FFF3F3F3"
+                    app:borderWidth="0dp"
+
+                    />
+
+                <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:id="@+id/setDefaultButton"
+                    android:layout_width="0dp"
+                    android:layout_height="50sp"
+                    app:fabCustomSize="50sp"
+                    android:layout_weight="1"
+                    app:srcCompat="@drawable/ic_set_as_default"
+                    android:backgroundTint="#FFF3F3F3"
+                    android:layout_marginLeft="20sp"
+                    android:layout_marginBottom="10sp"
+                    app:borderWidth="0dp"
+
+                    />
             </LinearLayout>
         </RelativeLayout>
 
