--- a/app/src/main/res/layout/fragment_tags.xml
+++ b/app/src/main/res/layout/fragment_tags.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/tagsFragment"
     android:layout_width="match_parent"
@@ -21,6 +22,7 @@
             android:layout_weight="1"
             android:clipToPadding="false"
             android:paddingBottom="50dp"
+
             tools:listitem="@layout/item_tags_manager" />
     </LinearLayout>
 
@@ -30,6 +32,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|start"
         android:layout_margin="32dp"
-        android:src="@drawable/ic_add" />
+        android:backgroundTint="#FFF3F3F3"
+        app:borderWidth="0sp"
+        app:srcCompat="@drawable/ic_add_image" />
 
 </FrameLayout>
