UserProfile and Match popUp use budnles information instead fetching from firebase

--- a/app/src/main/res/drawable/pop_bg.xml
+++ b/app/src/main/res/drawable/pop_bg.xml
@@ -3,7 +3,7 @@
 
     <gradient
         android:startColor="#eeffffff"
-        android:endColor="#eeffffff"
+        android:endColor="#FFFFFF"
         android:angle="90"/>
 
     <corners
