--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -11,18 +11,30 @@
         android:id="@+id/toolBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true">
+        android:layout_alignParentTop="true"
+        app:contentInsetLeft="0dp"
+        app:contentInsetStart="16dp">
+
+        <ImageView
+            android:id="@+id/back_arrow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/ic_back_arrow"
+            android:scaleY="1.25"
+            android:scaleX="1.25"
+            android:paddingLeft="5sp"
+            android:paddingRight="10sp"/>
+
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-
             <TextView
                 android:id="@+id/userName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5sp"
-                android:layout_marginTop="14sp"
+                android:layout_marginTop="17sp"
                 android:layout_toEndOf="@+id/profileImage"
                 android:layout_toRightOf="@+id/profileImage"
                 android:text="Name"
@@ -35,6 +47,8 @@
                 android:layout_height="60sp"
                 android:layout_marginStart="10sp"
                 android:layout_marginLeft="50dp"
+                android:layout_marginTop="3sp"
+                android:layout_marginBottom="3sp"
                 android:padding="5sp"
                 android:src="@drawable/ic_profile_hq" />
         </RelativeLayout>
