--- a/app/src/main/res/layout/activity_users_profiles.xml
+++ b/app/src/main/res/layout/activity_users_profiles.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/userProfileActivity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="false"
-    android:id="@+id/userProfileActivity">
+    android:fillViewport="false">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -12,33 +13,36 @@
         android:orientation="vertical"
         tools:context="com.pinder.app.UsersProfilesActivity">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1">
-        </LinearLayout>
-
-
         <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="500sp"
+            android:layout_gravity="top"
+            android:layout_weight="20"
+            android:orientation="horizontal"
+            android:paddingBottom="5sp">
+
+            <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="500sp"
-                android:layout_gravity="top"
-                android:layout_weight="20"
-                android:orientation="horizontal"
-                android:paddingBottom="5sp">
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                android:src="@drawable/ic_profile_hq" />
 
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/ic_profile_hq" />
+            <androidx.viewpager.widget.ViewPager
+                android:id="@+id/viewPager"
+                android:layout_width="match_parent"
+                android:layout_height="500sp" />
 
-
-                <androidx.viewpager.widget.ViewPager
-                    android:id="@+id/viewPager"
-                    android:layout_width="match_parent"
-                    android:layout_height="500sp" />
-            </RelativeLayout>
+            <ImageView
+                android:id="@+id/back_arrow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="17sp"
+                android:paddingLeft="21sp"
+                android:paddingRight="10sp"
+                android:scaleX="1.25"
+                android:scaleY="1.25"
+                app:srcCompat="@drawable/ic_back_arrow" />
+        </RelativeLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -204,7 +208,6 @@
                     android:src="@drawable/ic_like"
                     android:text="LIKE"
                     android:visibility="invisible" />
-
             </LinearLayout>
         </RelativeLayout>
     </LinearLayout>
