--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -34,6 +34,7 @@
             android:layout_height="match_parent"
             android:gravity="center"
             android:text="Loading users"
+            android:paddingTop="100dp"
             android:textSize="25sp" />
 
         <ProgressBar
@@ -42,9 +43,10 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:scaleX="0.4"
-            android:scaleY="0.4"
-            android:visibility="gone" />
+            android:scaleX="0.3"
+            android:scaleY="0.3"
+            android:visibility="gone"
+            android:paddingBottom="100dp"/>
 
         <com.lorentzos.flingswipe.SwipeFlingAdapterView
             android:id="@+id/frame"
