--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -23,14 +23,13 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:src="@drawable/ic_profile_hq"
-                android:scaleType="centerCrop"/>
+                android:scaleType="centerCrop"
+                android:src="@drawable/ic_profile_hq" />
 
             <androidx.viewpager.widget.ViewPager
                 android:id="@+id/viewPager"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                />
+                android:layout_height="match_parent" />
 
             <ProgressBar
                 android:id="@+id/profile_progress_bar"
@@ -38,9 +37,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:scaleX="0.4"
-                android:scaleY="0.4"
+                android:scaleX="0.3"
+                android:scaleY="0.3"
                 android:visibility="gone" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -52,42 +52,40 @@
                     android:id="@+id/delImage"
                     android:layout_width="0dp"
                     android:layout_height="50sp"
-                    app:fabCustomSize="50sp"
-                    android:layout_weight="1"
-                    app:srcCompat="@drawable/ic_del_image"
-                    android:backgroundTint="#F3F3F3"
                     android:layout_marginLeft="15sp"
                     android:layout_marginBottom="10sp"
+                    android:layout_weight="1"
+                    android:backgroundTint="#F3F3F3"
                     android:scaleType="center"
+                    android:rotation="45"
                     app:borderWidth="0dp"
-                    />
+                    app:fabCustomSize="50sp"
+                    app:srcCompat="@drawable/ic_add_image" />
 
                 <com.google.android.material.floatingactionbutton.FloatingActionButton
                     android:id="@+id/addImage"
                     android:layout_width="0dp"
                     android:layout_height="50sp"
-                    app:fabCustomSize="50sp"
-                    android:layout_weight="1"
-                    app:srcCompat="@drawable/ic_add_image"
                     android:layout_marginLeft="20sp"
                     android:layout_marginBottom="10sp"
+                    android:layout_weight="1"
                     android:backgroundTint="#FFF3F3F3"
                     app:borderWidth="0dp"
-
+                    app:fabCustomSize="50sp"
+                    app:srcCompat="@drawable/ic_add_image"
                     />
 
                 <com.google.android.material.floatingactionbutton.FloatingActionButton
                     android:id="@+id/setDefaultButton"
                     android:layout_width="0dp"
                     android:layout_height="50sp"
-                    app:fabCustomSize="50sp"
-                    android:layout_weight="1"
-                    app:srcCompat="@drawable/ic_set_as_default"
-                    android:backgroundTint="#FFF3F3F3"
                     android:layout_marginLeft="20sp"
                     android:layout_marginBottom="10sp"
+                    android:layout_weight="1"
+                    android:backgroundTint="#FFF3F3F3"
                     app:borderWidth="0dp"
-
+                    app:fabCustomSize="50sp"
+                    app:srcCompat="@drawable/ic_set_as_default"
                     />
             </LinearLayout>
         </RelativeLayout>
