--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -17,7 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="45sp"
             android:orientation="horizontal"
-            tools:listitem="@layout/item_tags"/>
+            tools:listitem="@layout/item_tags" />
     </LinearLayout>
 
 
@@ -30,12 +30,13 @@
 
         <TextView
             android:id="@+id/noMore"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
             android:gravity="center"
-            android:text="Loading users"
-            android:paddingTop="100dp"
-            android:textSize="25sp" />
+            android:text=""
+            android:textSize="20sp" />
 
         <ProgressBar
             android:id="@+id/progress_bar"
@@ -43,10 +44,10 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
+            android:paddingBottom="0dp"
             android:scaleX="0.3"
             android:scaleY="0.3"
-            android:visibility="gone"
-            android:paddingBottom="100dp"/>
+            android:visibility="gone" />
 
         <com.lorentzos.flingswipe.SwipeFlingAdapterView
             android:id="@+id/frame"
@@ -73,8 +74,8 @@
             android:layout_height="75sp"
             android:layout_weight="1"
             android:paddingLeft="50sp"
-            android:src="@drawable/ic_dislike"
-            android:text="DISLIKE" />
+            android:text="DISLIKE"
+            app:srcCompat="@drawable/ic_dislike" />
 
         <ImageView
             android:id="@+id/likeButton"
@@ -82,8 +83,8 @@
             android:layout_height="75sp"
             android:layout_weight="1"
             android:paddingRight="50sp"
-            android:src="@drawable/ic_like"
-            android:text="LIKE" />
+            android:text="LIKE"
+            app:srcCompat="@drawable/ic_like" />
     </LinearLayout>
 </LinearLayout>
 
