--- a/app/src/main/res/layout/item_matches.xml
+++ b/app/src/main/res/layout/item_matches.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
@@ -10,7 +11,7 @@
         android:id="@+id/MatchImage"
         android:layout_width="55sp"
         android:layout_height="55sp"
-        android:src="@drawable/ic_profile_hq"
+        app:srcCompat="@drawable/ic_profile_hq"
         app:civ_border_width="3dp" />
 
     <LinearLayout
