--- a/app/src/main/res/layout/activity_users_profiles.xml
+++ b/app/src/main/res/layout/activity_users_profiles.xml
@@ -32,16 +32,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="500sp" />
 
-            <ImageView
-                android:id="@+id/back_arrow"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="17sp"
-                android:paddingLeft="21sp"
-                android:paddingRight="10sp"
-                android:scaleX="1.25"
-                android:scaleY="1.25"
-                app:srcCompat="@drawable/ic_back_arrow" />
+<!--            <ImageView-->
+<!--                android:id="@+id/back_arrow"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginTop="17sp"-->
+<!--                android:paddingLeft="21sp"-->
+<!--                android:paddingRight="10sp"-->
+<!--                android:scaleX="1.25"-->
+<!--                android:scaleY="1.25"-->
+<!--                app:srcCompat="@drawable/ic_back_arrow" />-->
         </RelativeLayout>
 
         <LinearLayout
