--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -73,6 +74,7 @@
                 android:paddingLeft="10sp"
                 android:paddingRight="10sp"
                 android:text="Restart matches" />
+
             <Button
                 android:id="@+id/moveUsersLocToGeoFire"
                 android:layout_width="100dp"
@@ -138,15 +140,15 @@
                 android:layout_height="100sp"
                 android:scaleX="1"
                 android:scaleY="1"
-                android:src="@drawable/ic_logovector"
-                android:text="Tags" />
+                android:text="Tags"
+                app:srcCompat="@drawable/ic_logovector" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="top"
                 android:paddingBottom="20sp"
-                android:text="Beta Version: 1.3" />
+                android:text="@string/version" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
