--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -3,9 +3,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:padding="50sp"
     tools:context="com.pinder.app.RegistrationActivity">
+    <ImageView
+        android:id="@+id/back_arrow"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="17sp"
+        android:paddingLeft="21sp"
+        android:paddingRight="10sp"
+        android:scaleX="1.25"
+        android:scaleY="1.25"
+        app:srcCompat="@drawable/ic_back_arrow" />
 
     <TextView
         android:id="@+id/title"
@@ -120,7 +131,7 @@
         android:text="Register">
     </Button>
 
-    <TextView
+    <View
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_weight="1" />
@@ -128,6 +139,8 @@
     <ImageView
         android:layout_width="200sp"
         android:layout_height="200sp"
+        android:scaleX="0.75"
+        android:scaleY="0.75"
         android:layout_gravity="bottom|center"
         android:layout_weight="0"
         android:paddingTop="20sp"
